<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/id_nim"
        android:layout_width="35dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_nim"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextNim"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="352dp"
        android:layout_height="43dp"
        android:layout_marginTop="2dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_nim">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNim"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:inputType="number"
            android:padding="1dp"
            android:textSize="11sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/id_nama"
        android:layout_width="45dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_nama"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextNim" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextNama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="352dp"
        android:layout_height="43dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_nama">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNama"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:inputType="text"
            android:padding="1dp"
            android:textSize="11sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/id_kehadiran"
        android:layout_width="95dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_kehadiran"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextNama" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextKehadiran"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="352dp"
        android:layout_height="43dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_kehadiran">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editKehadiran"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:inputType="number"
            android:padding="1dp"
            android:textSize="11sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/id_tugas"
        android:layout_width="75dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_tugas"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextKehadiran" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextTugas"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="352dp"
        android:layout_height="43dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_tugas">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTugas"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:inputType="number"
            android:padding="1dp"
            android:textSize="11sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/id_uts"
        android:layout_width="50dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_uts"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextTugas" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextUts"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="352dp"
        android:layout_height="43dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_uts">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUts"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:inputType="number"
            android:padding="1dp"
            android:textSize="11sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/id_uas"
        android:layout_width="51dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_uas"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextUts" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextUas"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="352dp"
        android:layout_height="43dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_uas">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUas"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:inputType="number"
            android:padding="1dp"
            android:textSize="11sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnHitung"
        android:layout_width="105dp"
        android:layout_height="36dp"
        android:layout_marginTop="2dp"
        android:padding="1dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextUas"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/id_hasilNim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_nim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHitung" />

    <TextView
        android:id="@+id/id_hasilNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_nama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_hasilNim" />

    <TextView
        android:id="@+id/id_hasilKehadiran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_kehadiran"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_hasilNama" />

    <TextView
        android:id="@+id/id_hasilTugas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_tugas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_hasilKehadiran" />

    <TextView
        android:id="@+id/id_hasilUts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_uts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_hasilTugas" />

    <TextView
        android:id="@+id/id_hasilUas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_uas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_hasilUts" />

    <TextView
        android:id="@+id/id_hasilAkhir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:text="@string/text_nilaiAkhir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHitung" />

    <TextView
        android:id="@+id/id_mutu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_mutu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_hasilAkhir"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/id_viewNim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toEndOf="@+id/id_hasilNim"
        app:layout_constraintTop_toBottomOf="@+id/btnHitung"
        tools:text="12345" />

    <TextView
        android:id="@+id/id_viewNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/id_hasilNama"
        app:layout_constraintTop_toBottomOf="@+id/id_viewNim"
        tools:text="Herman" />

    <TextView
        android:id="@+id/id_viewKehadiran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toEndOf="@+id/id_hasilKehadiran"
        app:layout_constraintTop_toBottomOf="@+id/id_viewNama"
        tools:text="100" />

    <TextView
        android:id="@+id/id_viewTugas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/id_hasilTugas"
        app:layout_constraintTop_toBottomOf="@+id/id_viewKehadiran"
        tools:text="95" />

    <TextView
        android:id="@+id/id_viewUts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/id_hasilUts"
        app:layout_constraintTop_toBottomOf="@+id/id_viewTugas"
        tools:text="95" />

    <TextView
        android:id="@+id/id_viewUas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/id_hasilUas"
        app:layout_constraintTop_toBottomOf="@+id/id_hasilUts"
        app:layout_constraintVertical_bias="0.0"
        tools:text="95" />

    <TextView
        android:id="@+id/id_viewNilaiAkhir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toEndOf="@+id/id_hasilAkhir"
        app:layout_constraintTop_toBottomOf="@+id/btnHitung"
        tools:text="95" />

    <TextView
        android:id="@+id/id_viewMutu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toEndOf="@+id/id_mutu"
        app:layout_constraintTop_toBottomOf="@+id/id_viewNilaiAkhir"
        app:layout_constraintVertical_bias="0.0"
        tools:text="A" />

</androidx.constraintlayout.widget.ConstraintLayout>